# qtm2

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yml  rust.yml
res/: install.sh  qtm2.desktop
src/: category.rs  file_dialog.rs  image.rs  main.rs  password_prompt.rs  qtm.rs  qtm_config.rs  qtm_networking.rs  selectable_table.rs  tag.rs  torrent.rs  unwrap_trace.rs
