[package]
name = "qtm2"
version = "0.1.9"
authors = ["Fiery Furry <fiery.furry@proton.me>"]
edition = "2021"
description = "Quick Torrent Maker 2"
license = "BSD-2-Clause Plus Patent License"
readme = "README.md"
homepage = "https://github.com/fieryfurry/qtm2"
repository = "https://github.com/fieryfurry/qtm2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytesize = "1.2"
directories = "5.0"
eframe = "0.21"
fs_extra = "1.3"
image = "0.24"
lava_torrent = "0.10"
open = "4.0"
rfd = "0.11"
strum = "0.24"
strum_macros = "0.24"
toml = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
walkdir = "2.3"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "cookies", "multipart"]